# blinkexe

./: .gitignore  CMakeLists.txt  README.md
dependencies/glad/: CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
src/: CMakeLists.txt  app.cpp  app.hpp  config.hpp  main.cpp
src/components/: camera_component.hpp  physics_component.hpp  render_component.hpp  transform_component.hpp
src/core/: CMakeLists.txt
src/factories/: factory.cpp  factory.hpp
src/shaders/: default.frag  default.vert
src/systems/: camera_system.cpp  camera_system.hpp  motion_system.cpp  motion_system.hpp  render_system.cpp  render_system.hpp
src/utils/: model_loader.cpp  model_loader.hpp  shader.cpp  shader.hpp
